# annofetch

./: LICENSE.txt  README.md  pyproject.toml
annofetch/: cli.py
annofetch.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
