# pyproject.toml

[project]
name = "annofetch"
version = "0.1.0"
description = "A simple tool to download genome and annotation files from Ensembl."
authors = [{name = "Emanuele Monteleone", email = "emontele@unito.it"}]
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
    "requests",
    "tqdm",
    "typer[all]", # typer for the CLI, [all] includes rich for nice formatting
]

[project.scripts]
annofetch = "annofetch.cli:app"

[tool.setuptools.package-data]
"annofetch" = ["data/*.txt"]
